# UPKUtils

./: CMakeLists.txt  CompareUPK.cpp  CustomTFC.cpp  CustomTFC.h  DecompressLZO.cpp  DeserializeAll.cpp  ExportTexturesToDDS.cpp  ExtractNameLists.cpp  FileUtils.h  FindObjectByOffset.cpp  FindObjectEntry.cpp  HexToPseudoCode.cpp  ImportTexturesFromDDS.cpp  LzoUtils.cpp  LzoUtils.h  ModParser.cpp  ModParser.h  ModScript.cpp  ModScript.h  MoveExpandFunction.cpp  ParseTfc.cpp  PatchUPK.cpp  README.md  RepairFunction.cpp  UENativeTablesReader.cpp  UFlags.cpp  UFlags.h  UObject.cpp  UObject.h  UObjectFactory.cpp  UObjectFactory.h  UPKInfo.cpp  UPKInfo.h  UPKUtils.cbp  UPKUtils.cpp  UPKUtils.h  UToken.cpp  UToken.h  UTokenFactory.cpp  UTokenFactory.h  (+3 more)
PatcherGUI/: PatcherGUI.cbp  PatcherGUIApp.cpp  PatcherGUIApp.h  PatcherGUIMain.cpp  PatcherGUIMain.h  SettingsDialog.cpp  SettingsDialog.h  ShowDebugLogDialog.cpp  ShowDebugLogDialog.h  ViewLog.cpp  ViewLog.h  resource.rc
PatcherGUI/wxsmith/: PatcherGUIframe.wxs  SettingsDialog.wxs  ShowDebugLogDialog.wxs  ViewLog.wxs
TestMod/: LargerPodsTest.txt
TestMod/Functions.bin/: XComAlienPodManager.GetPodCharArray.Function  XComAlienPodManager.OvermindSpawn.Function  XGBattleDesc.InitAlienLoadoutInfos.Function  XGStrategyAI.#GetPodProgs.Function  XGStrategyAI.BuildPod.Function  XGStrategyAI.DetermineAbductionSquad.Function  XGStrategyAI.DetermineAbductorSquad.Function  XGStrategyAI.DetermineAlienBaseSquad.Function  XGStrategyAI.DetermineBattleshipSquad.Function  XGStrategyAI.DetermineCovertOpsSquad.Function  XGStrategyAI.DetermineExaltRaidSquad.Function  XGStrategyAI.DetermineFirstMissionSquad.Function  XGStrategyAI.DetermineLargeScoutSquad.Function  XGStrategyAI.DetermineOverseerSquad.Function  XGStrategyAI.DetermineSmallScoutSquad.Function  XGStrategyAI.DetermineSpecialMissionSquad.Function  XGStrategyAI.DetermineSupplySquad.Function  XGStrategyAI.DetermineTerrorSquad.Function  XGStrategyAI.DistributeAliens.Function  XGStrategyAI.ProcessPodTypes.Function
XComLZO/: XComLZO.cbp  main.cpp
doc/: PatchUPK_Mod_Example.txt  PatchUPK_Readme.txt  PatcherGUIExtendedReadme.txt  PatcherGUIReadme.txt  UPKUtils_Readme.txt
